--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,8 @@ img {
   padding-bottom: 16px;
   background-color: #e0e0e0;
   background-image: linear-gradient(to right, #03a9f4, #212121);
+  position: sticky;
+  top: 0;
 }
 
 .page-header .container {
@@ -93,11 +95,8 @@ img {
   padding: 48px;
   border-radius: 12px;
   background-color: #212121;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 255, 0.15),
-      rgba(0, 0, 255, 0.15)
-    ),
+  background-image:
+    linear-gradient(to bottom, rgba(0, 0, 255, 0.15), rgba(0, 0, 255, 0.15)),
     url(https://cdn.pixabay.com/photo/2016/11/22/22/24/adult-1850925_1280.jpg);
   background-repeat: no-repeat;
   background-position: center center;
@@ -160,8 +159,10 @@ img {
   flex-basis: calc((100% - 32px) / 3);
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2),
-    0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
+  box-shadow:
+    0px 3px 3px -2px rgba(0, 0, 0, 0.2),
+    0px 3px 4px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 8px 0px rgba(0, 0, 0, 0.12);
 }
 
 .club-list .content {
@@ -267,11 +268,13 @@ img {
   color: #ffffff;
   cursor: pointer;
   background-color: #03a9f4;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px,
-    rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
-    position: fixed;
-    bottom: 32px;
-    right: 32px;
+  box-shadow:
+    rgba(0, 0, 0, 0.2) 0px 3px 1px -2px,
+    rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
+    rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+  position: fixed;
+  bottom: 32px;
+  right: 32px;
 }
 
 .manager-chat-btn:hover {
