--- a/styles.css
+++ b/styles.css
@@ -53,13 +53,14 @@ img {
 }
 
 .page-header {
+  position: sticky;
+  top: 0;
   margin-bottom: 20px;
   padding-top: 16px;
   padding-bottom: 16px;
   background-color: #e0e0e0;
   background-image: linear-gradient(to right, #03a9f4, #212121);
-  position: sticky;
-  top: 0;
+    z-index: 999
 }
 
 .page-header .container {
@@ -76,27 +77,35 @@ img {
 .page-nav .link {
   display: block;
   padding: 4px 8px;
-  color: #03a9f4;
+  border-radius: 2px;
+  color: #fff;
   text-decoration: none;
   font-size: 14px;
   text-transform: uppercase;
+  transition-property: color, background-color;
+  transition-duration: 150ms;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0ms, 150ms;
+    transition: 150ms ease-in-out 0ms, background-colour 150ms ease-in-out 150ms
+
 }
 
 .page-nav .link:hover,
-.page-nav .link:focus {
-  color: #0288d1;
-}
-
+.page-nav .link:focus,
 .page-nav .link:active {
   color: #f44336;
+  background-color: #fff
 }
 
 .hero {
   padding: 48px;
   border-radius: 12px;
   background-color: #212121;
-  background-image:
-    linear-gradient(to bottom, rgba(0, 0, 255, 0.15), rgba(0, 0, 255, 0.15)),
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 255, 0.15),
+      rgba(0, 0, 255, 0.15)
+    ),
     url(https://cdn.pixabay.com/photo/2016/11/22/22/24/adult-1850925_1280.jpg);
   background-repeat: no-repeat;
   background-position: center center;
@@ -159,10 +168,8 @@ img {
   flex-basis: calc((100% - 32px) / 3);
   border-radius: 8px;
   overflow: hidden;
-  box-shadow:
-    0px 3px 3px -2px rgba(0, 0, 0, 0.2),
-    0px 3px 4px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 8px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2),
+    0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
 }
 
 .club-list .content {
@@ -261,20 +268,19 @@ img {
 }
 
 .manager-chat-btn {
-  padding: 12px 16px;
-  border: none;
-  border-radius: 4px;
-  text-transform: uppercase;
-  color: #ffffff;
-  cursor: pointer;
-  background-color: #03a9f4;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0px 3px 1px -2px,
-    rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
-    rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
   position: fixed;
   bottom: 32px;
   right: 32px;
+  padding: 12px 16px;
+  border: none;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #03a9f4;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px,
+    rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+    z-index: 999
 }
 
 .manager-chat-btn:hover {
